--- a/group.html
+++ b/group.html
@@ -693,7 +693,8 @@ git config --global alias.st status
         const tabs = document.querySelectorAll('.tab');
         const sections = document.querySelectorAll('.section');
         const progress = document.getElementById('progress');
-        
+        //Secret message, under the HTML, Secret secret message!
+        let ename = "hi"
         let completedSections = new Set();
 
         tabs.forEach(tab => {
