--- a/group.html
+++ b/group.html
@@ -2,6 +2,7 @@
 <!--Jeremy was here-->
 <!--Tanner was here-->
 <!--Luke was here-->
+<!--Elijah was here-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
